<resources>
    <string name="app_name">Lab05</string>
    <string name="reset">Reset</string>
    <string name="onCreate">onCreate(): </string>
    <string name="onStart">onStart(): </string>
    <string name="onResume">onResume(): </string>
    <string name="onPause">onPause(): </string>
    <string name="onStop">onStop(): </string>
    <string name="onRestart">onRestart(): </string>
    <string name="onDestroy">onDestroy(): </string>
</resources>
